--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "empxrem",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Library for converting px to em and rem.",
   "main": "dist/index.bundle.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "npx jest",
-    "clean": "rm -rd dist",
+    "clean": "npx rimraf dist",
     "rollup": "rollup -c ./rollup.config.js",
     "build": "npm run test && npm run clean && npm run compile && npm run rollup",
     "compile": "tsc --outDir dist --project tsconfig.build.json",
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/ALMaclaine/empxrem.git"
   },
   "files": [
     "dist"
@@ -30,19 +30,15 @@
   "author": "Alessandro MacLaine",
   "license": "MIT",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/ALMaclaine/empxrem/issues"
   },
-  "homepage": "",
-  "dependencies": {},
+  "homepage": "https://github.com/ALMaclaine/empxrem",
   "devDependencies": {
-    "@almaclaine/rollup-config": "^0.0.2",
-    "@almaclaine/ts-config": "^0.0.1",
-    "@types/node": "^14.14.9",
-    "esm": "^3.2.25",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.1.2",
-    "@types/jest": "^26.0.15",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4"
+    "@almaclaine/eslint-config": "^0.0.1",
+    "@almaclaine/rollup-config": "^0.0.14",
+    "@almaclaine/ts-config": "^0.2.5",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.5",
+    "ts-jest": "^27.0.5"
   }
 }
